Remove unused system metrics from nsILookAndFeel and implementations.  (Bug 599657)  r=roc  a2.0=joedrew